[project]
name = "xhd-wallet-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joe Polny", email = "joepolny@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cffi>=2.0.0",
    "types-cffi>=1.17.0.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xhd_wallet_api_py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
