[project]
name = "xhd-wallet-api"
version = "0.1.0"
description = "BIP32-ed25519 library that supports Khovratovich derivation and Peikert derivation"
authors = [
  { name = "Algorand Foundation", email = "contact@algorand.foundation" },
]
requires-python = ">=3.10"
dependencies = [
    "cffi>=2.0.0",
    "types-cffi>=1.17.0.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xhd_wallet_api_py"]
include = ["src/xhd_wallet_api_py/*.dylib", "src/xhd_wallet_api_py/*.so", "src/xhd_wallet_api_py/*.dll"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): bump version to {version}"
commit_author = "semantic-release <semantic-release@github.com>"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = ["^chore\\(release\\):"]

[tool.semantic_release.remote]
type = "github"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = [
    "auditwheel>=6.6.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pynacl>=1.5.0",
    "python-semantic-release>=10.0.0",
]
